@@ -1,5 +1,5 @@
 /*
- *   $Id: pathnames.h,v 1.3 2001/11/14 19:58:11 lutchann Exp $
+ *   $Id: pathnames.h,v 1.4 2001/12/28 07:25:11 psavola Exp $
  *
  *   Authors:
  *    Pedro Roque		<roque@di.fc.ul.pt>
@@ -31,5 +31,11 @@
 
 #define PATH_PROC_NET_IF_INET6 "/proc/net/if_inet6"
 #define PATH_PROC_NET_IGMP6 "/proc/net/igmp6"
+
+#ifdef __linux__
+#define SYSCTL_IP6_FORWARDING CTL_NET, NET_IPV6, NET_IPV6_CONF, NET_PROTO_CONF_ALL, NET_IPV6_FORWARDING
+#else /* BSD */
+#define SYSCTL_IP6_FORWARDING CTL_NET, PF_INET6, IPPROTO_IPV6, IPV6CTL_FORWARDING
+#endif
 
 #endif
