@@ -1,4 +1,8 @@
-$Id: CHANGES,v 1.12 2001/11/22 08:30:26 psavola Exp $
+$Id: CHANGES,v 1.13 2001/12/28 07:25:11 psavola Exp $
+
+12/21/2001	Check via sysctl that IPv6 forwarding is enabled;
+		exit unless debugging is enabled.  Triggered by
+		Marko Myllynen.
 
 11/22/2001	MinRtrAdvInterval for MIPv6 is 0.05 seconds, not 0.5.
 
